2006-10-18  Marcin Dalecki  <martin@dalecki.de>

	* omp-low.c (expand_parallel_call): Use BSI_SAME_STMT instead of
	TSI_SAME_STMT, since that's the desired entity.

2006-10-17  Wolfgang Gellerich  <gellerich@de.ibm.com>

	* config/s390/contraints.md: New file.
        * config/s390/s390-protos.h (s390_mem_constraint, 
	s390_O_constraint_str, s390_N_constraint_str, 
	s390_float_const_zero_p): Function prototypes added.
	* config/s390/s390.c (s390_extra_constraint_str, 
	s390_const_double_ok_for_constraint_p, 
	s390_const_ok_for_constraint_p): Functions removed.
        (s390_mem_constraint, s390_O_constraint_str, s390_N_constraint_str,
	s390_float_const_zero_p): New functions.
	* config/s390/s390.h (REG_CLASS_FROM_LETTER, CONST_OK_FOR_CONSTRAINT_P,
	CONST_DOUBLE_OK_FOR_CONSTRAINT_P, EXTRA_CONSTRAINT_STR, 
	EXTRA_MEMORY_CONSTRAINT, EXTRA_ADDRESS_CONSTRAINT, CONSTRAINT_LEN): 
	Macro definitions removed.
	(s390_const_ok_for_constraint_p, s390_const_double_ok_for_constraint_p,
	s390_extra_constraint_str): Functions removed.

2006-10-17  Andrew Pinsiki  <pinskia@gmail.com>
	    Richard Sandiford  <richard@codesourcery.com>

	PR target/29413
	* config/mips/linux.h (SUBTARGET_CC1_SPEC): Override.
	* config/mips/mips.h (CC1_SPEC): Override any earlier definition.

2006-10-16  Geoffrey Keating  <geoffk@apple.com>

	* config/rs6000/sysv4.h (DBX_REGISTER_NUMBER): Move to rs6000.h.
	(DWARF2_FRAME_REG_OUT): Likewise.
	* config/rs6000/rs6000.h (DBX_REGISTER_NUMBER): Move from sysv4.h.
	(DWARF2_FRAME_REG_OUT): Likewise.

2006-10-17  Paul Brook  <paul@codesourcery.com>

	* config/arm/arm.c (arm_rtx_costs_1): Handle multiply-accumulate.

2006-10-16  Brooks Moses  <bmoses@stanford.edu>

	* doc/contrib.texi, doc/install.texi, doc/standards.texi:
	Standardize on "GNU Fortran" as the official name of the Fortran
	compiler.

2006-10-16  Mike Stump  <mrs@apple.com>

	* doc/invoke.texi (Darwin Options): Document -mkernel.
	* config/rs6000/darwin.h (SUBTARGET_OVERRIDE_OPTIONS): Add