@@ -1,3 +1,9 @@
+2006-10-18  Jan Hubicka  <jh@suse.cz>
+
+	PR middle-end/29299
+	* cfgexpand.c (expand_used_vars_for_block): Vars marked used by user
+	are used.
+
 2006-10-18  Marcin Dalecki  <martin@dalecki.de>
 
 	* omp-low.c (expand_parallel_call): Use BSI_SAME_STMT instead of
